Rewrite custom tag parser